<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg"
        android:scaleType="fitXY"/>

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="38dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/back"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update User"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edFirstName"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:textColorHint="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ed_bg"
            android:hint="@string/firstname"
            android:textColor="@color/white"
            android:inputType="textPersonName"
            android:paddingHorizontal="17dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edLastName"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ed_bg"
            android:textColorHint="@color/white"
            android:hint="@string/lastname"
            android:textColor="@color/white"
            android:inputType="text"
            android:paddingHorizontal="17dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edAge"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/white"
            android:background="@drawable/ed_bg"
            android:textColor="@color/white"
            android:hint="@string/age"
            android:inputType="number"
            android:paddingHorizontal="17dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/ed_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="17dp" />

        <TextView
            android:id="@+id/tvSuccessError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:alpha="0"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdateUser"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_bg"
            android:text="@string/update_user"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>